--- a/index.html
+++ b/index.html
@@ -29,7 +29,15 @@
 	├── <a href="./index.html">index.html</a><br>
 	├── <a href="./LICENSE">LICENSE</a><br>
 	├── <a href="./Plans/">Plans</a><br>
-	└── <a href="./README.md">README.md</a><br>
+	│   ├── <a href="./Plans/401/">401</a><br>
+	│   ├── <a href="./Plans/408/">408</a><br>
+	│   ├── <a href="./Plans/502/">502</a><br>
+	│   ├── <a href="./Plans/506/">506</a><br>
+	│   ├── <a href="./Plans/602/">602</a><br>
+	│   ├── <a href="./Plans/plan.html">plan.html</a><br>
+	│   └── <a href="./Plans/test.txt">test.txt</a><br>
+	├── <a href="./README.md">README.md</a><br>
+	└── <a href="./test.txt">test.txt</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
