--- a/index.html
+++ b/index.html
@@ -30,10 +30,19 @@
 	├── <a href="./LICENSE">LICENSE</a><br>
 	├── <a href="./Plans/">Plans</a><br>
 	│   ├── <a href="./Plans/401/">401</a><br>
+	│   │   ├── <a href="./Plans/401/401.pdf">401.pdf</a><br>
+	│   │   └── <a href="./Plans/401/PDC.odg">PDC.odg</a><br>
 	│   ├── <a href="./Plans/408/">408</a><br>
+	│   │   └── <a href="./Plans/408/PDC.odg">PDC.odg</a><br>
 	│   ├── <a href="./Plans/502/">502</a><br>
+	│   │   ├── <a href="./Plans/502/502.pdf">502.pdf</a><br>
+	│   │   └── <a href="./Plans/502/PDC.odg">PDC.odg</a><br>
 	│   ├── <a href="./Plans/506/">506</a><br>
+	│   │   ├── <a href="./Plans/506/506.pdf">506.pdf</a><br>
+	│   │   └── <a href="./Plans/506/PDC.odg">PDC.odg</a><br>
 	│   ├── <a href="./Plans/602/">602</a><br>
+	│   │   ├── <a href="./Plans/602/602.pdf">602.pdf</a><br>
+	│   │   └── <a href="./Plans/602/PDC.odg">PDC.odg</a><br>
 	│   ├── <a href="./Plans/plan.html">plan.html</a><br>
 	│   └── <a href="./Plans/test.txt">test.txt</a><br>
 	├── <a href="./README.md">README.md</a><br>
