--- a/index.html
+++ b/index.html
@@ -26,27 +26,43 @@
 <body>
 	<h1>Directory Tree</h1><p>
 	<a href=".">.</a><br>
-	├── <a href="./index.html">index.html</a><br>
-	├── <a href="./LICENSE">LICENSE</a><br>
-	├── <a href="./Plans/">Plans</a><br>
-	│   ├── <a href="./Plans/401/">401</a><br>
-	│   │   ├── <a href="./Plans/401/401.pdf">401.pdf</a><br>
-	│   │   └── <a href="./Plans/401/PDC.odg">PDC.odg</a><br>
-	│   ├── <a href="./Plans/408/">408</a><br>
-	│   │   └── <a href="./Plans/408/PDC.odg">PDC.odg</a><br>
-	│   ├── <a href="./Plans/502/">502</a><br>
-	│   │   ├── <a href="./Plans/502/502.pdf">502.pdf</a><br>
-	│   │   └── <a href="./Plans/502/PDC.odg">PDC.odg</a><br>
-	│   ├── <a href="./Plans/506/">506</a><br>
-	│   │   ├── <a href="./Plans/506/506.pdf">506.pdf</a><br>
-	│   │   └── <a href="./Plans/506/PDC.odg">PDC.odg</a><br>
-	│   ├── <a href="./Plans/602/">602</a><br>
-	│   │   ├── <a href="./Plans/602/602.pdf">602.pdf</a><br>
-	│   │   └── <a href="./Plans/602/PDC.odg">PDC.odg</a><br>
-	│   ├── <a href="./Plans/plan.html">plan.html</a><br>
-	│   └── <a href="./Plans/test.txt">test.txt</a><br>
-	├── <a href="./README.md">README.md</a><br>
-	└── <a href="./test.txt">test.txt</a><br>
+	├── <a href="./5/">5</a><br>
+	│   ├── <a href="./5/S01/">S01</a><br>
+	│   │   ├── <a href="./5/S01/5-S1-FM.pdf">5-S1-FM.pdf</a><br>
+	│   │   ├── <a href="./5/S01/DS1-S01-5.pdf">DS1-S01-5.pdf</a><br>
+	│   │   ├── <a href="./5/S01/DS2-S01-5.pdf">DS2-S01-5.pdf</a><br>
+	│   │   ├── <a href="./5/S01/FA2-S01-5.pdf">FA2-S01-5.pdf</a><br>
+	│   │   ├── <a href="./5/S01/FA3-S01-5.pdf">FA3-S01-5.pdf</a><br>
+	│   │   └── <a href="./5/S01/FA-S01-5.pdf">FA-S01-5.pdf</a><br>
+	│   ├── <a href="./5/S02/">S02</a><br>
+	│   │   ├── <a href="./5/S02/FA-5-S02.pdf">FA-5-S02.pdf</a><br>
+	│   │   └── <a href="./5/S02/FM-5-S02.pdf">FM-5-S02.pdf</a><br>
+	│   └── <a href="./5/S03/">S03</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./5/S03/FA2-5-S03.pdf">FA2-5-S03.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./5/S03/FA-5-S03.pdf">FA-5-S03.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./5/S03/FM-5-S03.pdf">FM-5-S03.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; └── <a href="./5/S03/FM-5-S03-VE.pdf">FM-5-S03-VE.pdf</a><br>
+	├── <a href="./6/">6</a><br>
+	│   ├── <a href="./6/S01/">S01</a><br>
+	│   │   ├── <a href="./6/S01/6-FA1-S1.pdf">6-FA1-S1.pdf</a><br>
+	│   │   ├── <a href="./6/S01/6-FA2-S1.pdf">6-FA2-S1.pdf</a><br>
+	│   │   ├── <a href="./6/S01/DS1-S01-6.pdf">DS1-S01-6.pdf</a><br>
+	│   │   ├── <a href="./6/S01/DS2-S01-6.pdf">DS2-S01-6.pdf</a><br>
+	│   │   └── <a href="./6/S01/FM-6-S01.pdf">FM-6-S01.pdf</a><br>
+	│   ├── <a href="./6/S02/">S02</a><br>
+	│   │   ├── <a href="./6/S02/FA2-6-S02.pdf">FA2-6-S02.pdf</a><br>
+	│   │   ├── <a href="./6/S02/FA-6-S02.pdf">FA-6-S02.pdf</a><br>
+	│   │   └── <a href="./6/S02/FM-6-S02.pdf">FM-6-S02.pdf</a><br>
+	│   ├── <a href="./6/S03/">S03</a><br>
+	│   │   ├── <a href="./6/S03/FA-6-S03.pdf">FA-6-S03.pdf</a><br>
+	│   │   └── <a href="./6/S03/FM-6-S03.pdf">FM-6-S03.pdf</a><br>
+	│   ├── <a href="./6/S04/">S04</a><br>
+	│   │   ├── <a href="./6/S04/FA-6-S04.pdf">FA-6-S04.pdf</a><br>
+	│   │   └── <a href="./6/S04/FM-6-S04.pdf">FM-6-S04.pdf</a><br>
+	│   └── <a href="./6/S05/">S05</a><br>
+	│   &nbsp;&nbsp;&nbsp; ├── <a href="./6/S05/FM-6-S05.pdf">FM-6-S05.pdf</a><br>
+	│   &nbsp;&nbsp;&nbsp; └── <a href="./6/S05/sesamath/">sesamath</a><br>
+	└── <a href="./index.html">index.html</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
