--- a/6/6.html
+++ b/6/6.html
@@ -28,24 +28,24 @@
 	<a href=".">.</a><br>
 	├── <a href="./6.html">6.html</a><br>
 	├── <a href="./S01/">S01</a><br>
-	│   ├── <a href="./S01/6-FA1-S1.pdf">6-FA1-S1.pdf</a><br>
-	│   ├── <a href="./S01/6-FA2-S1.pdf">6-FA2-S1.pdf</a><br>
-	│   ├── <a href="./S01/DS1-S01-6.pdf">DS1-S01-6.pdf</a><br>
-	│   ├── <a href="./S01/DS2-S01-6.pdf">DS2-S01-6.pdf</a><br>
-	│   └── <a href="./S01/FM-6-S01.pdf">FM-6-S01.pdf</a><br>
-	├── <a href="./S02/">S02</a><br>
-	│   ├── <a href="./S02/FA2-6-S02.pdf">FA2-6-S02.pdf</a><br>
-	│   ├── <a href="./S02/FA-6-S02.pdf">FA-6-S02.pdf</a><br>
-	│   └── <a href="./S02/FM-6-S02.pdf">FM-6-S02.pdf</a><br>
-	├── <a href="./S03/">S03</a><br>
-	│   ├── <a href="./S03/FA-6-S03.pdf">FA-6-S03.pdf</a><br>
-	│   └── <a href="./S03/FM-6-S03.pdf">FM-6-S03.pdf</a><br>
-	├── <a href="./S04/">S04</a><br>
-	│   ├── <a href="./S04/FA-6-S04.pdf">FA-6-S04.pdf</a><br>
-	│   └── <a href="./S04/FM-6-S04.pdf">FM-6-S04.pdf</a><br>
-	└── <a href="./S05/">S05</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="./S05/FM-6-S05.pdf">FM-6-S05.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="./S05/sesamath/">sesamath</a><br>
+	│   ├── <a href="./S01/6-FA1-S1.pdf"target="_blank">6-FA1-S1.pdf</a><br>
+	│   ├── <a href="./S01/6-FA2-S1.pdf"target="_blank">6-FA2-S1.pdf</a><br>
+	│   ├── <a href="./S01/DS1-S01-6.pdf"target="_blank">DS1-S01-6.pdf</a><br>
+	│   ├── <a href="./S01/DS2-S01-6.pdf"target="_blank">DS2-S01-6.pdf</a><br>
+	│   └── <a href="./S01/FM-6-S01.pdf"target="_blank">FM-6-S01.pdf</a><br>
+	├── <a href="./S02/"target="_blank">S02</a><br>
+	│   ├── <a href="./S02/FA2-6-S02.pdf"target="_blank">FA2-6-S02.pdf</a><br>
+	│   ├── <a href="./S02/FA-6-S02.pdf"target="_blank">FA-6-S02.pdf</a><br>
+	│   └── <a href="./S02/FM-6-S02.pdf"target="_blank">FM-6-S02.pdf</a><br>
+	├── <a href="./S03/"target="_blank">S03</a><br>
+	│   ├── <a href="./S03/FA-6-S03.pdf"target="_blank">FA-6-S03.pdf</a><br>
+	│   └── <a href="./S03/FM-6-S03.pdf"target="_blank">FM-6-S03.pdf</a><br>
+	├── <a href="./S04/"target="_blank">S04</a><br>
+	│   ├── <a href="./S04/FA-6-S04.pdf"target="_blank">FA-6-S04.pdf</a><br>
+	│   └── <a href="./S04/FM-6-S04.pdf"target="_blank">FM-6-S04.pdf</a><br>
+	└── <a href="./S05/"target="_blank">S05</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="./S05/FM-6-S05.pdf"target="_blank">FM-6-S05.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="./S05/sesamath/"target="_blank">sesamath</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
