--- a/index.html
+++ b/index.html
@@ -27,24 +27,18 @@
 	<h1>Directory Tree</h1><p>
 	<a href=".">.</a><br>
 	├── <a href="./5/">5</a><br>
-	│   ├── <a href="./5/5.html">5.html</a><br>
-	│   ├── <a href="./5/S01/">S01</a><br>
-	│   ├── <a href="./5/S02/">S02</a><br>
-	│   └── <a href="./5/S03/">S03</a><br>
+	│   ├── <a href="./5/5.html"target="_blank">5.html</a><br>
+	│   ├── <a href="./5/S01/">S01</a><br>
+	│   ├── <a href="./5/S02/">S02</a><br>
+	│   └── <a href="./5/S03/">S03</a><br>
 	├── <a href="./6/">6</a><br>
-	│   ├── <a href="./6/6.html">6.html</a><br>
-	│   ├── <a href="./6/S01/">S01</a><br>
-	│   ├── <a href="./6/S02/">S02</a><br>
-	│   ├── <a href="./6/S03/">S03</a><br>
-	│   ├── <a href="./6/S04/">S04</a><br>
-	│   └── <a href="./6/S05/">S05</a><br>
+	│   ├── <a href="./6/6.html"target="_blank">6.html</a><br>
+	│   ├── <a href="./6/S01/">S01</a><br>
+	│   ├── <a href="./6/S02/">S02</a><br>
+	│   ├── <a href="./6/S03/">S03</a><br>
+	│   ├── <a href="./6/S04/">S04</a><br>
+	│   └── <a href="./6/S05/">S05</a><br>
 	└── <a href="./index.html">index.html</a><br>
 	<hr>
-	<p class="VERSION">
-		 tree v2.0.2 © 1996 - 2022 by Steve Baker and Thomas Moore <br>
-		 HTML output hacked and copyleft © 1998 by Francesc Rocher <br>
-		 JSON output hacked and copyleft © 2014 by Florian Sesser <br>
-		 Charsets / OS/2 support © 2001 by Kyosuke Tokoro
-	</p>
 </body>
 </html>
