--- a/5/5.html
+++ b/5/5.html
@@ -22,7 +22,7 @@
  </style>
 </head>
 <body>
-	<h1>Directory Tree</h1><p>
+	<h1>Classe de Cinquième</h1><p>
 	<a href=".">.</a><br>
 	├── <a href="./5.html">5.html</a><br>
 	├── <a href="./S01/">S01</a><br>
