--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  </style>
 </head>
 <body>
-	<h1>Directory Tree</h1><p>
+	<h1>Cours de Maths 2022/2023</h1><p>
 	<a href=".">.</a><br>
 	├── <a href="./5/">5</a><br>
 	│   ├── <a href="./5/5.html"target="_blank">5.html</a><br>
