--- a/6/6.html
+++ b/6/6.html
@@ -22,7 +22,7 @@
  </style>
 </head>
 <body>
-	<h1>Directory Tree</h1><p>
+	<h1>Classe de Sixième</h1><p>
 	<a href=".">.</a><br>
 	├── <a href="./6.html">6.html</a><br>
 	├── <a href="./S01/">S01</a><br>
