--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -29,6 +29,8 @@
 	├── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/">Chap. 0 - Rappels sur les équations </a><br>
 	│   └── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/FA1_S0_Rappels.pdf">FA1_S0_Rappels.pdf</a><br>
 	└── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/">Chap. 1 - Polynomes du second degré</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/FA-S1-forme-canonique.pdf">FA-S1-forme-canonique.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/FM-S1-Polynome-second-degre.pdf">FM-S1-Polynome-second-degre.pdf</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
