--- a/index.html
+++ b/index.html
@@ -25,14 +25,14 @@
 </head>
 <body>
 	<h1>Cours de Maths/Choix du niveau</h1><p>
-	<a href="././index.html">.</a><br>
-	├── <a href="././Cinquieme/index.html">Cinquieme</a><br>
-	├── <a href="././Premiere/index.html">Premiere</a><br>
-	├── <a href="././Quatrieme/index.html">Quatrieme</a><br>
-	├── <a href="././Seconde/index.html">Seconde</a><br>
-	├── <a href="././Sixieme/index.html">Sixieme</a><br>
-	├── <a href="././Terminale/index.html">Terminale</a><br>
-	└── <a href="././Troisieme/index.html">Troisieme</a><br>
+	<a href="././">.</a><br>
+	├── <a href="././Cinquieme/">Cinquieme</a><br>
+	├── <a href="././Premiere/">Premiere</a><br>
+	├── <a href="././Quatrieme/">Quatrieme</a><br>
+	├── <a href="././Seconde/">Seconde</a><br>
+	├── <a href="././Sixieme/">Sixieme</a><br>
+	├── <a href="././Terminale/">Terminale</a><br>
+	└── <a href="././Troisieme/">Troisieme</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
