--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -26,6 +26,10 @@
 <body>
 	<h1>Cours de Maths/Cinquieme</h1><p>
 	<a href="././">.</a><br>
+	└── <a href="././S01-priorites-operatoires/">S01-priorites-operatoires</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-priorites-operatoires/FA2-5-S01.pdf">FA2-5-S01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-priorites-operatoires/FA-5-S02.pdf">FA-5-S02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S01-priorites-operatoires/FM-5-S02.pdf">FM-5-S02.pdf</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
