--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -26,6 +26,9 @@
 <body>
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="././">.</a><br>
+	└── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions%20pos%C3%A9es.pdf">FA-S01-6-additions posées.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%C3%A9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
