--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<h1>Cours de Maths/Premiere</h1><p>
-	<a href="././">.</a><br>
+	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	├── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/">Chap. 0 - Rappels sur les équations </a><br>
 	│   └── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/FA1_S0_Rappels.pdf">FA1_S0_Rappels.pdf</a><br>
 	└── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/">Chap. 1 - Polynomes du second degré</a><br>
