--- a/Seconde/index.html
+++ b/Seconde/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
 	<h1>Cours de Maths/Seconde</h1><p>
-	<a href="././">.</a><br>
+	<a href="https://outerovitch-maths.github.io/">↰</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
