--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -26,11 +26,10 @@
 <body>
 	<h1>Cours de Maths/Terminale</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
-	├── <a href="././S01-Suites-Num%C3%A9riques/">S01-Suites-Numériques</a><br>
-	│   ├── <a href="././S01-Suites-Num%C3%A9riques/FA1-recurrence-explicite.pdf">FA1-recurrence-explicite.pdf</a><br>
-	│   ├── <a href="././S01-Suites-Num%C3%A9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
-	│   └── <a href="././S01-Suites-Num%C3%A9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
-	└── <a href="././test.pdf">test.pdf</a><br>
+	└── <a href="././S01-Suites-Num%C3%A9riques/">S01-Suites-Numériques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Suites-Num%C3%A9riques/FA1-recurrence-explicite.pdf">FA1-recurrence-explicite.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Suites-Num%C3%A9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S01-Suites-Num%C3%A9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
 	<hr>
 	<p class="VERSION">
 		 tree v2.1.3 © 1996 - 2024 by Steve Baker and Thomas Moore <br>
