--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
  </style>
 </head>
 <body>
-	<h1>Cours de Maths/Choix du niveau</h1><p>
+	<h1>Cours de Maths</h1><p>
 	<a href="././index.html">.</a><br>
 	├── <a href="././Cinquieme/index.html">Cinquieme</a><br>
 	├── <a href="././Premiere/index.html">Premiere</a><br>
