--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -26,9 +26,11 @@
 <body>
 	<h1>Cours de Maths/Sixieme</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
-	└── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions%20pos%C3%A9es.pdf">FA-S01-6-additions posées.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%C3%A9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
+	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
+	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions%20pos%C3%A9es.pdf">FA-S01-6-additions posées.pdf</a><br>
+	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%C3%A9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
+	└── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/">S02-Notions-de-Géométrie</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
 	<hr>
 </body>
 </html>
