--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -32,6 +32,9 @@
 	│   └── <a href="././S01-Suites-Num%C3%A9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
 	└── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples.pdf">FA1-S02-ProbaSimples.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-1-ProbaSimples.pdf">FA2-S02-1-ProbaSimples.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
 	<hr>
 </body>
