--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -26,11 +26,17 @@
 <body>
 	<h1>Cours de Maths/Premiere</h1><p>
 	<a href="https://outerovitch-maths.github.io/">↰</a><br>
-	├── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/">Chap. 0 - Rappels sur les équations </a><br>
-	│   └── <a href="././Chap.%200%20-%20Rappels%20sur%20les%20%C3%A9quations%20/FA1_S0_Rappels.pdf">FA1_S0_Rappels.pdf</a><br>
-	└── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/">Chap. 1 - Polynomes du second degré</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/FA-S1-forme-canonique.pdf">FA-S1-forme-canonique.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././Chap.%201%20-%20Polynomes%20du%20second%20degr%C3%A9/FM-S1-Polynome-second-degre.pdf">FM-S1-Polynome-second-degre.pdf</a><br>
+	├── <a href="././S00-Rappels-%C3%A9quations%20/">S00-Rappels-équations </a><br>
+	│   └── <a href="././S00-Rappels-%C3%A9quations%20/FA1_S0_Rappels.pdf">FA1_S0_Rappels.pdf</a><br>
+	└── <a href="././S01-Polynomes-second-degr%C3%A9/">S01-Polynomes-second-degré</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA1-S1-forme-canonique.pdf">FA1-S1-forme-canonique.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA2-S1-Variations.pdf">FA2-S1-Variations.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA3-S1-1-Extremum.pdf">FA3-S1-1-Extremum.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA3-S1-2-Extremum.pdf">FA3-S1-2-Extremum.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA3-S1-3-Extremum.pdf">FA3-S1-3-Extremum.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA3-S1-4-Extremum.pdf">FA3-S1-4-Extremum.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S01-Polynomes-second-degr%C3%A9/FA3-S1-Extremum.pdf">FA3-S1-Extremum.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S01-Polynomes-second-degr%C3%A9/FM-S1-Polynome-second-degre.pdf">FM-S1-Polynome-second-degre.pdf</a><br>
 	<hr>
 </body>
 </html>
