--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -35,6 +35,7 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-1-ProbaSimples.pdf">FA2-S02-1-ProbaSimples.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
 	<hr>
 </body>
