5eme S02 cours exos

--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -30,6 +30,7 @@
 	│   ├── <a href="././S01-priorites-operatoires/FA2-5-S01.pdf">FA2-5-S01.pdf</a><br>
 	│   └── <a href="././S01-priorites-operatoires/FM-5-S02.pdf">FM-5-S02.pdf</a><br>
 	└── <a href="././S02-Calculs-avec-fractions/">S02-Calculs-avec-fractions</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Calculs-avec-fractions/FA-01-S02-Fractions.pdf">FA-01-S02-Fractions.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Calculs-avec-fractions/FM-S02-Calculs-avec-fractions.pdf">FM-S02-Calculs-avec-fractions.pdf</a><br>
 	<hr>
 </body>
