--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -31,14 +31,16 @@
 	│   ├── <a href="././S01-Suites-Num%C3%A9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
 	│   └── <a href="././S01-Suites-Num%C3%A9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
 	└── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/auto/">auto</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples.pdf">FA1-S02-ProbaSimples.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-1-ProbaSimples.pdf">FA2-S02-1-ProbaSimples.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA4-S02-ProbaCondi-Arbres.pdf">FA4-S02-ProbaCondi-Arbres.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA-5-S02-ARbre-probleme.pdf">FA-5-S02-ARbre-probleme.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
 	<hr>
 </body>
