--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -33,7 +33,13 @@
 	│   ├── <a href="././S02-Calculs-avec-fractions/FA-01-S02-Fractions.pdf">FA-01-S02-Fractions.pdf</a><br>
 	│   └── <a href="././S02-Calculs-avec-fractions/FM-S02-Calculs-avec-fractions.pdf">FM-S02-Calculs-avec-fractions.pdf</a><br>
 	└── <a href="././S03-Angles/">S03-Angles</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/5g3_ex1.pdf">5g3_ex1.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/5g3_ex2.pdf">5g3_ex2.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/5g3_ex3a.pdf">5g3_ex3a.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/_COURS_ELEVE_Les_angles.pdf">_COURS_ELEVE_Les_angles.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/FA-01-S03-5-Mesurer-des-angles.pdf">FA-01-S03-5-Mesurer-des-angles.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/FA-02-S03-Reconnaitre.pdf">FA-02-S03-Reconnaitre.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/FA-02-S03-Reconnaitre-v2.pdf">FA-02-S03-Reconnaitre-v2.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/FM-01-S03-5-Rappels-mesure-angles.pdf">FM-01-S03-5-Rappels-mesure-angles.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/SES094-Comprendre_la_notion_d_angle.pdf">SES094-Comprendre_la_notion_d_angle.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Angles/SES096-Nommer_des_angles.pdf">SES096-Nommer_des_angles.pdf</a><br>
