--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -30,18 +30,23 @@
 	│   ├── <a href="././S01-Suites-Num%C3%A9riques/FA1-recurrence-explicite.pdf">FA1-recurrence-explicite.pdf</a><br>
 	│   ├── <a href="././S01-Suites-Num%C3%A9riques/FA2-Situations-problemes.pdf">FA2-Situations-problemes.pdf</a><br>
 	│   └── <a href="././S01-Suites-Num%C3%A9riques/FM-S1-Suites.pdf">FM-S1-Suites.pdf</a><br>
-	└── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples.pdf">FA1-S02-ProbaSimples.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-1-ProbaSimples.pdf">FA2-S02-1-ProbaSimples.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA4-S02-ProbaCondi-Arbres.pdf">FA4-S02-ProbaCondi-Arbres.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
+	├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/">S02-Probabilités-Conditionnelles</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples.pdf">FA1-S02-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-1-ProbaSimples.pdf">FA2-S02-1-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-2-ProbaSimples.pdf">FA2-S02-2-ProbaSimples.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA2-S02-ProbaSimples-et-Tableaux.pdf">FA2-S02-ProbaSimples-et-Tableaux.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA3-S02-ProbaCondi-Formule.pdf">FA3-S02-ProbaCondi-Formule.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA4-S02-ProbaCondi-Arbres.pdf">FA4-S02-ProbaCondi-Arbres.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
+	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
+	│   └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
+	└── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/">S03-Suites-Géométriques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_crs%20-%20Suites%20num%C3%A9riques.pdf">STI2D_TN9_crs - Suites numériques.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1a%20-%20Suites%20g%C3%A9om%C3%A9triques%20(exercices%20de%20base).pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1b%20-%20Suites%20g%C3%A9om%C3%A9triques%20et%20pourcentages.pdf">STI2D_TN9_ex1b - Suites géométriques et pourcentages.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex3a%20-%20Bilan.pdf">STI2D_TN9_ex3a - Bilan.pdf</a><br>
 	<hr>
 </body>
 </html>
