--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -39,9 +39,11 @@
 	│   └── <a href="././S01-Polynomes-second-degr%C3%A9/FM-S1-Polynome-second-degre.pdf">FM-S1-Polynome-second-degre.pdf</a><br>
 	└── <a href="././S02-D%C3%A9rivation-I/">S02-Dérivation-I</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-00-S02-Activit%C3%A9-Introductive.pdf">FA-00-S02-Activité-Introductive.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-00-S02-Live.pdf">FA-00-S02-Live.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-01-S02-Limites-pentes.pdf">FA-01-S02-Limites-pentes.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-02-S02-Lecture-graphique.pdf">FA-02-S02-Lecture-graphique.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-03-S02-Taux-accroissement.pdf">FA-03-S02-Taux-accroissement.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-04-S02-Tangente.pdf">FA-04-S02-Tangente.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-D%C3%A9rivation-I/FA-09-S02-Probl%C3%A8mes-de-recherche.pdf">FA-09-S02-Problèmes-de-recherche.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-D%C3%A9rivation-I/FM-S02-D%C3%A9rivation-I.pdf">FM-S02-Dérivation-I.pdf</a><br>
 	<hr>
