--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -30,11 +30,12 @@
 	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions%20pos%C3%A9es.pdf">FA-S01-6-additions posées.pdf</a><br>
 	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%C3%A9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
 	└── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/">S02-Notions-de-Géométrie</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6_E02_Objets_geometrie.pdf">6_E02_Objets_geometrie.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesIntroductionGeometrie%20V2.pdf">ExercicesIntroductionGeometrie V2.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
 	<hr>
 </body>
