deleting Cinquieme/S03-Angles/FA-02-S03-Reconnaitre.aux ✓

--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -29,14 +29,17 @@
 	├── <a href="././S01-Numeration-entiere/">S01-Numeration-entiere</a><br>
 	│   ├── <a href="././S01-Numeration-entiere/FA-S01-6-additions%20pos%C3%A9es.pdf">FA-S01-6-additions posées.pdf</a><br>
 	│   └── <a href="././S01-Numeration-entiere/FM-S01-6-Num%C3%A9ration-entiere.pdf">FM-S01-6-Numération-entiere.pdf</a><br>
-	└── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/">S02-Notions-de-Géométrie</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
+	├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/">S02-Notions-de-Géométrie</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1a.pdf">6g1_ex1a.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1b.pdf">6g1_ex1b.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/6g1_ex1c.pdf">6g1_ex1c.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-01.pdf">ExercicesGeometrie-01.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
+	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
+	│   └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
+	└── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
 	<hr>
 </body>
 </html>
