--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -39,6 +39,7 @@
 	│   └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
 	└── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
 	<hr>
 </body>
