adding Sixieme/index.html ✓

--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -40,6 +40,9 @@
 	└── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
 	<hr>
 </body>
