adding Terminale/index.html ✓

--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -43,6 +43,7 @@
 	│   ├── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
 	│   └── <a href="././S02-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
 	└── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/">S03-Suites-Géométriques</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/FA-01-S03-Revisions.pdf">FA-01-S03-Revisions.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_crs%20-%20Suites%20num%C3%A9riques.pdf">STI2D_TN9_crs - Suites numériques.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1a%20-%20Suites%20g%C3%A9om%C3%A9triques%20(exercices%20de%20base).pdf">STI2D_TN9_ex1a - Suites géométriques (exercices de base).pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex1b%20-%20Suites%20g%C3%A9om%C3%A9triques%20et%20pourcentages.pdf">STI2D_TN9_ex1b - Suites géométriques et pourcentages.pdf</a><br>
