--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -37,13 +37,18 @@
 	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/ExercicesGeometrie-02.pdf">ExercicesGeometrie-02.pdf</a><br>
 	│   ├── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/Exercices-Intro-Geometrie.pdf">Exercices-Intro-Geometrie.pdf</a><br>
 	│   └── <a href="././S02-Notions-de-G%C3%A9om%C3%A9trie/FM-S02-Geometrie.pdf">FM-S02-Geometrie.pdf</a><br>
-	└── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
+	├── <a href="././S03-Operations-decimaux/">S03-Operations-decimaux</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-01-S03-Additions-decimales.pdf">FA-01-S03-Additions-decimales.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-02-S03-Soustractions-decimales.pdf">FA-02-S03-Soustractions-decimales.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-03-S03-Additions-decimales-trou.pdf">FA-03-S03-Additions-decimales-trou.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-03-S03-Soustractions-decimales-trou.pdf">FA-03-S03-Soustractions-decimales-trou.pdf</a><br>
+	│   ├── <a href="././S03-Operations-decimaux/FA-05-S03-Problemes-1.pdf">FA-05-S03-Problemes-1.pdf</a><br>
+	│   └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
+	└── <a href="././S04-Cercle/">S04-Cercle</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/00.FM-S04-Cercles.pdf">00.FM-S04-Cercles.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/%2300.FM-S04-Cercles.tex%23">#00.FM-S04-Cercles.tex#</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/10.FA-01-S04-Vocabulaire-cercle.pdf">10.FA-01-S04-Vocabulaire-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Cercle/20.Activit%C3%A9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
 	<hr>
 </body>
 </html>
