--- a/Sixieme/index.html
+++ b/Sixieme/index.html
@@ -46,8 +46,19 @@
 	│   └── <a href="././S03-Operations-decimaux/FM-S03-Op%C3%A9rations-sur-les-nombres-d%C3%A9cimaux.pdf">FM-S03-Opérations-sur-les-nombres-décimaux.pdf</a><br>
 	└── <a href="././S04-Cercle/">S04-Cercle</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/00.FM-S04-Cercles.pdf">00.FM-S04-Cercles.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/10.FA-01-S04-Vocabulaire-cercle.pdf">10.FA-01-S04-Vocabulaire-cercle.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Cercle/20.Activit%C3%A9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/11.FA-01-S04-Vocabulaire-cercle.pdf">11.FA-01-S04-Vocabulaire-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/12.FA-02-S04-Vocabulaire-cercle.pdf">12.FA-02-S04-Vocabulaire-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/13.0.FA-03-S04-Proprietes-cercle.pdf">13.0.FA-03-S04-Proprietes-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf">13.1.CORRECTION-FA-03-S04-Proprietes-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/14.FA-04-S04-Tracer-cercle.pdf.pdf">14.FA-04-S04-Tracer-cercle.pdf.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/15.0.FA-05-S04-Tracer-cercle.pdf">15.0.FA-05-S04-Tracer-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.1.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf">15.2.CORRECTION-FA-05-S04-Tracer-cercle.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/16.FA-06-S04-Tracer-Arcs.pdf">16.FA-06-S04-Tracer-Arcs.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/19.FA-09-S04-Programmes-de-constructions.pdf">19.FA-09-S04-Programmes-de-constructions.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/20.Activit%C3%A9-Perroquet.pdf">20.Activité-Perroquet.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Cercle/21.1.Flammant-rose-consigne.pdf">21.1.Flammant-rose-consigne.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Cercle/21.2.Flammant-rose-a-remplir.pdf">21.2.Flammant-rose-a-remplir.pdf</a><br>
 	<hr>
 </body>
 </html>
