--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -47,6 +47,7 @@
 	│   ├── <a href="././S02-D%C3%A9rivation-I/FA-09-S02-Probl%C3%A8mes-de-recherche.pdf">FA-09-S02-Problèmes-de-recherche.pdf</a><br>
 	│   └── <a href="././S02-D%C3%A9rivation-I/FM-S02-D%C3%A9rivation-I.pdf">FM-S02-Dérivation-I.pdf</a><br>
 	└── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/">S03-Probabilités-Conditionnelles</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/00.FM-S02-ProbaCondi.pdf">00.FM-S02-ProbaCondi.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-1.pdf">FA1-S02-ProbaSimples-1.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-2.pdf">FA1-S02-ProbaSimples-2.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-3.pdf">FA1-S02-ProbaSimples-3.pdf</a><br>
@@ -56,8 +57,7 @@
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-1.pdf">FA5-S02-ProbaCondi-Arbres-1.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-2.pdf">FA5-S02-ProbaCondi-Arbres-2.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-3.pdf">FA5-S02-ProbaCondi-Arbres-3.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FM-S02-ProbaCondi.pdf">FM-S02-ProbaCondi.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA5-S02-ProbaCondi-Arbres-4.pdf">FA5-S02-ProbaCondi-Arbres-4.pdf</a><br>
 	<hr>
 </body>
 </html>
