--- a/Premiere/index.html
+++ b/Premiere/index.html
@@ -48,6 +48,7 @@
 	│   └── <a href="././S02-D%C3%A9rivation-I/FM-S02-D%C3%A9rivation-I.pdf">FM-S02-Dérivation-I.pdf</a><br>
 	└── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/">S03-Probabilités-Conditionnelles</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/00.FM-S02-ProbaCondi.pdf">00.FM-S02-ProbaCondi.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/15.FA6-S04-Probl%C3%A8mes.pdf">15.FA6-S04-Problèmes.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-1.pdf">FA1-S02-ProbaSimples-1.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-2.pdf">FA1-S02-ProbaSimples-2.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S03-Probabilit%C3%A9s-Conditionnelles/FA1-S02-ProbaSimples-3.pdf">FA1-S02-ProbaSimples-3.pdf</a><br>
