--- a/Terminale/index.html
+++ b/Terminale/index.html
@@ -50,6 +50,7 @@
 	│   └── <a href="././S03-Suites-G%C3%A9om%C3%A9triques/STI2D_TN9_ex3a%20-%20Bilan.pdf">STI2D_TN9_ex3a - Bilan.pdf</a><br>
 	└── <a href="././S04-Derivation/">S04-Derivation</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/11.FA-01-S04-Evaluation-fonction.pdf">11.FA-01-S04-Evaluation-fonction.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Derivation/12.FA-02-S04-Discriminant.pdf">12.FA-02-S04-Discriminant.pdf</a><br>
 	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Derivation/EXERCICE-13.pdf">EXERCICE-13.pdf</a><br>
 	<hr>
 </body>
