--- a/Cinquieme/index.html
+++ b/Cinquieme/index.html
@@ -53,7 +53,8 @@
 	│   └── <a href="././S03-Angles/SES6096-Nommer_des_angles.pdf">SES6096-Nommer_des_angles.pdf</a><br>
 	└── <a href="././S04-Relatifs/">S04-Relatifs</a><br>
 	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/FA1-5-S06-introduction.pdf">FA1-5-S06-introduction.pdf</a><br>
-	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Relatifs/FA2-5-S06-droites.pdf">FA2-5-S06-droites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; ├── <a href="././S04-Relatifs/FA2-5-S06-droites.pdf">FA2-5-S06-droites.pdf</a><br>
+	&nbsp;&nbsp;&nbsp; └── <a href="././S04-Relatifs/FM-5-S06.pdf">FM-5-S06.pdf</a><br>
 	<hr>
 </body>
 </html>
